# speedtestr

./: Cargo.toml  LICENSE.md  README.md  appveyor.yml
.github/: dependabot.yml
src/: lib.rs  main.rs
