[package]
name = "speedtestr"
version = "0.1.0"
authors = ["Zach Peters <zpeters@gmail.com>"]
edition = "2018"

[dependencies]
clap = "3.1.7"
rand = "0.8.3"
reqwest = { version = "0.11", features = ["json"]}
tokio = { version= "1.7.1", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
