[package]
name = "speedtestr"
version = "0.1.0"
authors = ["Zach Peters <zpeters@gmail.com>"]
edition = "2018"

[dependencies]
clap = "3.2.12"
hyper = "0.14.24"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"]}
tokio = { version= "1.20.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
hyper = "0.14.24"